--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 :root{
     --agua: #EBFFF9;
+    --aqua-100: #33F7C3;
 
     --neutral-100: #0B1530;
     --neutral-70: #6C7383;
@@ -141,10 +142,25 @@ h1, h2{
     margin: 0;
 }
 
+.pBold{
+    font-family: FuturaBold;
+}
 h1 {
     color: var(--white);
     font-family: FuturaBold;
     font-size: 40px;
+}
+
+h3{
+    font-family: FuturaBold;
+    font-size: 28px;
+    height: 36px;  
+    padding-bottom: 24px;
+    margin: 0;
+}
+
+.beforeh3{
+    margin-bottom: 40px !important;
 }
 
 p {
@@ -198,7 +214,7 @@ p {
 .mainContent h2 {
     color: var(--neutral-100);
     padding-bottom: 28px;
-    font-family: FuturaMedium;
+    font-family: Futura;
     font-size: 40px;
     font-style: normal;
     font-weight: 700;
@@ -429,6 +445,10 @@ p {
 .exampleMenuWrapper{
     padding-top: 28px;
     display: flex;
+}
+
+.paddingTop28{
+    padding-top: 28px;
 }
 
 .exampleMenuWrapper img{
@@ -784,4 +804,174 @@ input[type='radio'] + .radioError{
 
 .iconsTop{
     padding-top: 12px;
+}
+
+.mainTypoWrapper{
+    padding: 48px 238px;
+    background-color: var(--neutral-20);
+    max-width: 210px;
+    margin-top: 28px;
+    margin-bottom: 28px;
+}
+
+.mainTypoWrapper span{
+    line-height: 64px;
+    font-family: Futura;
+    font-size: 54px;
+}
+
+ul{
+    padding-left: calc(16.8px);
+    margin-top: 0;
+}
+
+li{
+    padding-left: 10px;
+    font-family: FuturaMedium;
+    font-size: 20px;
+    width: 654px;
+}
+
+li::marker{
+    content: "—"; /* FontAwesome Unicode */
+    font-family: Futura;
+    font-size: var(--icon-size);    
+    padding-right: 10px;
+}
+
+.mainTypoExamples{
+    display: flex;
+    padding: 32px 24px;
+    max-width: 656px;
+    width: 656px;
+    gap: 16px;
+    justify-content: space-evenly;
+}
+
+.leftWrapper{
+    display: flex;
+    flex-direction: column;
+    width: 457px;
+    border-right: 1px solid;
+}
+
+.rightWrapper{
+    display: flex;
+    flex-direction: column;
+}
+
+.leftWrapper h1, .leftWrapper h2, .leftWrapper h3{
+    padding-bottom: 0;
+    margin-bottom: 0;
+    margin-top: 0;
+}
+
+.leftWrapper p{
+    margin-bottom: 20px;
+}
+
+.leftWrapper h1{
+    margin-bottom: 36px;
+}
+
+.leftWrapper h2{
+    margin-bottom: 44px;
+}
+
+.rightWrapper *:nth-child(1){
+    margin-bottom: 53px;
+}
+
+.rightWrapper *:nth-child(2){
+    margin-bottom: 60px;
+}
+
+.rightWrapper *:nth-child(3){
+    margin-bottom: 56px;
+}
+
+.typoMenu{
+    height: 300px;
+    padding: 28px 20px;
+}
+
+.weight{
+    font-size: 40px;
+    line-height: 44px;
+    margin-bottom: 16px !important;
+}
+
+.rightWeight{
+    margin-bottom: 36px !important;
+}
+
+.mainTypoWeight{
+    height: 238px;
+}
+
+.rightWrapper + .mobile *:nth-child(1){
+    margin-bottom: 33px;
+}
+
+.rightWrapper + .mobile *:nth-child(2){
+    margin-bottom: 40px;
+}
+
+.rightWrapper + .mobile *:nth-child(3){
+    margin-bottom: 36px;
+}
+
+#mobileH1{
+    font-size: 36px;
+    line-height: 44px;
+    margin-bottom: 32px;
+}
+
+#mobileH2{
+    font-size: 24px;
+    line-height: 28px;
+    margin-bottom: 34px;
+}
+
+#mobileH3{
+    font-size: 20px;
+    line-height: 26px;
+}
+
+.typoExampleWrapper{
+    display: flex;
+    width: 325px;
+    height: 64px;
+    padding: 40px 40px 40px 51px;
+    margin-bottom: 28px;
+    margin-top: 8px;
+    justify-content: center;
+    align-items: center;
+    flex-shrink: 0;
+    border-radius: 24px;
+    background-color: var(--neutral-20);
+}
+
+.flexWow{
+    display: flex;
+    gap: 40px;
+    align-items: center;
+}
+
+.flexWow p{
+    padding-bottom: 0;
+}
+
+.aquaLine{
+    width: 183px;
+    border: 1px solid var(--aqua-100);
+    margin-bottom: 8px;
+    padding-bottom: 0;
+}
+
+.withLine{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 auto;
 }
