--- a/styles.css
+++ b/styles.css
@@ -86,6 +86,10 @@ html, body {
     text-decoration: none;
 }
 
+.sidenav h1{
+    text-transform: uppercase;
+}
+
 h1 a:visited{
     color: inherit;
 }
@@ -154,6 +158,7 @@ h1 {
 
 h3{
     font-family: FuturaBold;
+    color: var(--neutral-100);
     font-size: 28px;
     height: 36px;  
     padding-bottom: 24px;
@@ -166,6 +171,7 @@ h3{
 
 p {
     /* Text */
+    color: var(--neutral-100);
     font-family: FuturaMedium;
     font-size: 20px;
     line-height: 24px; /* 120% */
@@ -175,7 +181,7 @@ p {
     display: flex;
     width: 1032px;
     max-width: 1032px;
-    padding: 88px 104px 200px 104px;
+    padding: 88px 104px 180px 104px;
     flex-direction: column;
 }
 
@@ -193,6 +199,10 @@ p {
 
 .mainContent .contentBlock{
     padding-bottom: 64px;
+}
+
+.contentBeforeLink{
+    padding-bottom: 40px;
 }
 
 .mainContent .contentBlock:last-child{
@@ -215,10 +225,9 @@ p {
 .mainContent h2 {
     color: var(--neutral-100);
     padding-bottom: 28px;
-    font-family: Futura;
+    font-family: FuturaBold;
     font-size: 40px;
     font-style: normal;
-    font-weight: 700;
     line-height: 48px
 }
 
@@ -244,9 +253,9 @@ p {
     background-color: var(--neutral-20);
     border-radius: 24px;
     height: 147px;
+    color: var(--neutral-100);
     font-family: FuturaBold;
     font-size: 28px;
-    font-weight: 700;
     line-height: 36px;
 }
 
@@ -270,6 +279,8 @@ p {
     line-height: 24px;
     vertical-align: middle;
     font-family: FuturaBold;
+    color: var(--neutral-100);
+
 }
 
 .aboutListText{
@@ -316,7 +327,7 @@ p {
     border: none;
     outline: none;
     cursor: pointer;
-    padding: 14px 16px;
+    padding: 10px 32px;
     transition: 0.3s;
     color: var(--Neutral-100);
     /* Text */
@@ -371,10 +382,6 @@ p {
     padding-bottom: 54px !important;
 }
 
-.singleTabWrapper{
-    margin-right: 32px;
-}
-
 .menuTab{
     padding-bottom: 8px;
 }
@@ -413,8 +420,24 @@ p {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    margin-right: 32px;
 }
 
+.smallerTab{
+    height: 50px;
+}
+
+.marginTop8{
+    margin-top: 8px;
+}
+
+.LinkBlock{
+    display: flex;
+    align-items: center;
+    font-size: 20px;
+    line-height: 24px;
+    gap: 14px;
+}
 
 .singleTabCaption{
     font-family: FuturaMedium;
@@ -461,11 +484,7 @@ p {
 
 .correctBackground{
     background-color: var(--agua);
-    padding: 4px 6px 4px  9px;
-}
-
-.correctBackBiggerPadding{
-    padding: 4px 7px 4px  8px;
+    padding: 8px 6px 8px  4px;
 }
 
 .breadcrumb::before{
@@ -479,7 +498,7 @@ p {
 
     position: relative;
     top: 2px;
-    padding-right: 8px;
+    margin-right: 8px;
 }
 
 .breadcrumbHover::before {
@@ -768,6 +787,7 @@ input[type='radio'] + .radioError{
 }
 
 .modal h2{
+    color: var(--neutral-100);
     font-family: FuturaBold;
     font-size: 28px;
     line-height: 36px; /* 128.571% */
@@ -824,20 +844,28 @@ input[type='radio'] + .radioError{
     line-height: 64px;
     font-family: Futura;
     font-size: 54px;
+    color: var(--neutral-100);
 }
 
 ul{
-    padding-left: calc(16.8px);
     margin-top: 0;
+    padding-left: 0;
 }
 
 li{
-    padding-left: 10px;
+    color: var(--neutral-100);
     font-family: FuturaMedium;
     font-size: 20px;
     width: 654px;
 }
 
+.ulWithDashes{
+    padding-left: 16.8px;
+}
+
+.ulWithDashes li{
+    padding-left: 10px;
+}
 .aboutList li::marker{
     content: ""
 }
@@ -847,6 +875,8 @@ li::marker{
     font-family: Futura;
     font-size: var(--icon-size);    
     padding-right: 10px;
+    color: var(--neutral-100);
+
 }
 
 .mainTypoExamples{
@@ -984,4 +1014,8 @@ li::marker{
     flex-direction: column;
     align-items: center;
     margin: 0 auto;
+}
+
+.developmentTexts p{
+    padding-bottom: 24px;
 }
