--- a/styles.css
+++ b/styles.css
@@ -261,28 +261,10 @@ p {
 .principlesBlock {
     display: flex;
     flex-wrap: wrap;
-    padding-top: 64px;
+    gap: 24px;
 }
 
-.principlesElement{
-    margin-right: 24px;
-    margin-bottom: 24px;
-    width: 280px;
-    padding: 24px;
-    background-color: var(--neutral-20);
-    border-radius: 24px;
-    height: 147px;
-    color: var(--neutral-100);
-    font-family: FuturaBold;
-    font-size: 28px;
-    line-height: 36px;
-}
-
-.principlesBlock *:nth-child(3n) {
-    margin-right: 0;
-}
-
-.principlesElement:hover{
+.principlesBlock img:hover{
     cursor: pointer;
 }
 
@@ -292,6 +274,15 @@ p {
 
 .aboutList li {
     padding-bottom: 20px;
+}
+
+#linksDevelopment *{
+    padding-bottom: 0;
+}
+
+#linksDevelopment span{
+    line-height: 24px;
+    height: 24px;
 }
 
 .aboutListHeader{
@@ -965,8 +956,12 @@ li::marker{
     margin-bottom: 60px;
 }
 
+.rightWrapper *:nth-child(3){
+    margin-bottom: 56px;
+}
+
 .rightWrapper *:nth-child(4){
-    margin-bottom: 36px;
+    margin-bottom: 56px;
 }
 
 
@@ -998,7 +993,7 @@ li::marker{
     margin-bottom: 40px;
 }
 
-.rightWrapper + .mobile *:nth-child(3){
+.rightWrapper + .mobile *:nth-child(3), .rightWrapper + .mobile *:nth-child(4){
     margin-bottom: 36px;
 }
 
@@ -1055,7 +1050,7 @@ li::marker{
     margin: 0 auto;
 }
 
-.developmentTexts p{
+.developmentTexts p, .paddingBot24{
     padding-bottom: 24px;
 }
 
@@ -1252,4 +1247,13 @@ li::marker{
 
 .paddingTop0{
     padding-top: 0;
+}
+
+.pLink{
+    color: var(--info-100);
+    border-bottom: 1px solid var(--info-100);
+}
+
+.pLink:hover{
+    cursor: pointer;
 }
