--- a/styles.css
+++ b/styles.css
@@ -129,6 +129,7 @@ h1 a:visited{
 .firstLevel {
     width: 216px;
     padding: 7px 12px 9px 12px;
+    margin-bottom: 4px;
 }
 
 .secondLevel {
@@ -476,6 +477,19 @@ p {
     height: 176px;
 }
 
+.whenToUseGreenBiggie{
+    width: 280px;
+    height: 152px;
+}
+
+.inputWrapper{
+    margin-top: 24px;
+    margin-bottom: 32px;
+    padding: 40px 48px 48px 48px;
+    background: var(--neutral-20);
+    width: 240px;
+    border-radius: 24px;
+}
 
 .exampleMenuWrapper{
     padding-top: 28px;
@@ -602,6 +616,10 @@ button{
     margin-bottom: 32px; 
 }
 
+.paddingTop32{
+    padding-top: 32px;
+}
+
 .threeItems button {
     margin-bottom: 28px;
 }
@@ -690,6 +708,21 @@ input[type="checkbox"]{
     padding: 55px 163px;
     width: 410px;
 }
+
+.calendarTab{
+    align-items: flex-start;
+    width: 768px;
+    height: 420px;
+    padding: 0;
+}
+
+.tagsTab{
+    width: 736px;
+    height: 248px;
+    padding: 0;
+}
+
+
 .hugeMargin{
     padding-bottom: 28px;
     height: 24px;
@@ -1256,4 +1289,190 @@ li::marker{
 
 .pLink:hover{
     cursor: pointer;
+}
+
+.customTag{
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+    padding: 8px 16px;
+    border-radius: 24px;
+    background-color: var(--blue-40);
+    height: 24px;
+    margin-right: 24px;
+    max-width: fit-content;
+}
+
+.customTag p{
+    height: 24px;
+}
+
+.inputTab{
+    width: 240px;
+    height: 74px;
+    padding: 93px 264px 113px 264px;
+}
+
+.myInput{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.myInput label{
+    width: 216px;
+    color: var(--neutral-100, #0B1530);
+    font-family: FuturaMedium;
+    font-size: 20px;
+    line-height: 24px; 
+}
+
+.myInput input{
+    border-radius: 8px;
+    border: 1px solid var(--neutral-60);
+    background: var(--white);
+    height: 24px;
+    display: flex;
+    padding: 8px 12px;
+    align-items: flex-start;
+    gap: 10px;
+    }
+
+.myInput input::placeholder{
+    width: 216px;
+    color: var(--neutral-60);
+    font-family: FuturaMedium;
+    font-size: 20px;
+    line-height: 24px; 
+}
+
+.myInput input{
+    font-family: FuturaMedium;
+    font-size: 20px;
+    line-height: 24px; 
+}
+
+.myInput input:focus{
+    border: 1px solid var(--neutral-100);
+}
+
+.inputNameWrapper{
+    margin-top: 28px;
+    flex-direction: column;
+    display: flex;
+    gap: 12px;
+    width: 240px;
+}
+
+.manyInputsWrapper{
+    display: flex;
+    gap: 32px;
+}
+
+.incorrectInputName{
+    display: flex;
+    align-items: end;
+    gap: 20px;
+}
+
+.incorrectInputName p{
+    margin-bottom: 8px;
+}
+
+.inputsStatesWrapper{
+    display: flex;
+    gap: 16px;
+    width: 416px;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.inputsStatesWrapper:last-child{
+    margin-bottom: 0;
+}
+
+.inputsStatesWrapper p{
+    width: 144px;
+}
+
+.inputsStatesWrapper .myInput{
+    width: 256px;
+}
+
+.wideInput{
+    height: 66px;
+    padding: 40px 37px 40px 32px;
+    width: 332px;
+}
+
+.wideInput p{
+    width: fit-content;
+    margin-right: 4px;
+}
+
+.wideInput .myInput input{
+    width: 240px;
+}
+
+.myInput .incorrect{
+    font-size: 16px;
+    line-height: 15px;
+}
+
+.incorrectInputCaption{
+    display: flex;
+    gap: 8px;
+    align-items: center;
+}
+
+
+.incorrectInputCaption img{
+    background-color: var(--error-100);
+    width: 16px;
+    height: 16px;
+    border-radius: 16px;
+    margin-right: 0;
+}
+
+.incorrectInputsStyle{
+    margin-bottom: 26px;
+}
+
+#hoverInput:focus, .nonFocusable:focus{
+    outline: none;
+}
+
+#FulledInput, #FulledInput:active{
+    outline: none !important;
+    border: 2px solid var(--neutral-100);
+    border-radius: 8px;
+}
+
+#greenInput, #greenInput:active{
+    outline: none !important;
+    border: 2px solid var(--success-100);
+    border-radius: 8px;
+}
+
+#redInput, #redInput:active{
+    outline: none !important;
+    border: 2px solid var(--error-100);
+    border-radius: 8px;
+}
+
+#orangeInput, #orangeInput:active{
+    outline: none !important;
+    border: 2px solid var(--attention-100);
+    border-radius: 8px;
+}
+
+#hoverInput{
+    border: 1px solid var(--neutral-60);
+    background: var(--neutral-20);
+}
+
+input:disabled{
+    border: 1px solid var(--neutral-60);
+    background: var(--neutral-40);
+
 }
