--- a/styles.css
+++ b/styles.css
@@ -1453,7 +1453,7 @@ li::marker{
     border-radius: 8px;
 }
 
-#redInput, #redInput:active{
+#redInput, #redInput2, #redInput:active{
     outline: none !important;
     border: 2px solid var(--error-100);
     border-radius: 8px;
