--- a/styles.css
+++ b/styles.css
@@ -104,6 +104,7 @@ html, body {
 
 .sidenavWrapper a, h1 a  {
     text-decoration: none;
+    color: var(--white)
 }
 
 .sidenav h1{
@@ -111,7 +112,7 @@ html, body {
 }
 
 h1 a:visited{
-    color: inherit;
+    color: var(--white)
 }
 
 .firstLevel, .secondLevel {
@@ -291,7 +292,7 @@ p {
     vertical-align: middle;
     font-family: FuturaBold;
     color: var(--neutral-100);
-
+    padding-bottom: 0;
 }
 
 .aboutListText{
@@ -443,6 +444,7 @@ p {
 .marginTop8{
     margin-top: 8px;
 }
+
 
 .LinkBlock{
     display: flex;
@@ -620,7 +622,11 @@ button{
     padding-top: 32px;
 }
 
-.threeItems button {
+.paddingTop36{
+    padding-top: 36px;
+}
+
+.threeItems button, .marginBot28 {
     margin-bottom: 28px;
 }
 
@@ -942,8 +948,8 @@ li::marker{
 .leftWrapper{
     display: flex;
     flex-direction: column;
-    width: 457px;
-    border-right: 1px solid;
+    width: 430px;
+    border-right: 1px solid var(--neu);
 }
 
 .rightWrapper{
@@ -955,6 +961,10 @@ li::marker{
     padding-bottom: 0;
     margin-bottom: 0;
     margin-top: 0;
+}
+
+.leftWrapper p:first-child, .rightWrapper *:nth-child(1) {
+    color: var(--neutral-60);
 }
 
 .leftWrapper p, .marginBot20{
@@ -1004,9 +1014,25 @@ li::marker{
     margin-bottom: 16px !important;
 }
 
-.rightWeight{
-    margin-bottom: 36px !important;
+.noGap{
+    gap: 0;
 }
+
+.rightWeight:first-child{
+    color: var(--neutral-60);
+}
+.rightWeight{
+    margin-bottom: 48px !important;
+}
+
+.rightWeight:nth-child(2){
+    margin-bottom: 40px !important;
+}
+
+.rightWeight:nth-child(3){
+    margin-bottom: 40px !important;
+}
+
 
 .mainTypoWeight{
     height: 238px;
@@ -1082,7 +1108,8 @@ li::marker{
 }
 
 .mainTypoWrapper div:nth-last-child(-n+2) {
-    padding-left: 16px;
+    width: 66px;
+    padding-left: 22px;
 }
 
 .imagesPrinciplesWrapper{
@@ -1687,8 +1714,8 @@ background: var(--neutral-40);
 
 .greyBack{
     background-color: var(--neutral-20);
-    width: 384px;
-    height: 122px;
+    width: 367px;
+    height: 11  2px;
     padding: 16px;
     border-radius: 24px;
 
@@ -1727,7 +1754,7 @@ textarea::placeholder{
     padding: 40px 48px;
     border-radius: 24px;
     background: var(--neutral-20);
-    width: 320px;
+    width: 258px;
 }
 
 .textAreaStatesWrapper{
@@ -1740,4 +1767,14 @@ textarea::placeholder{
 
 .textAreaStatesWrapper p{
     margin-top: 8px;
+}
+
+
+.marginTop24{
+    margin-top: 24px;
+}
+
+.myTextarea .incorrectInputCaption p{
+    margin-top: 0;
+    padding-top: 0;
 }
